bk_ida/gccida/g2/wipe_dead_reg
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/wipe_dead_reg/src/local-alloc.c:2591:20: error: use of undeclared identifier 'this_insn_1'; did you mean 'this_insn'?
if ( **( _WORD **)&this_insn_1[2] == 39 ) 
                   ^~~~~~~~~~~
                   this_insn
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/wipe_dead_reg/src/local-alloc.c:243:12: note: 'this_insn' declared here
static rtx this_insn;
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/wipe_dead_reg/src/local-alloc.c:2593:21: error: use of undeclared identifier 'this_insn_1'; did you mean 'this_insn'?
if ( multiple_sets( this_insn_1) ) 
                    ^~~~~~~~~~~
                    this_insn
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/wipe_dead_reg/src/local-alloc.c:243:12: note: 'this_insn' declared here
static rtx this_insn;
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/wipe_dead_reg/src/local-alloc.c:2595:34: error: use of undeclared identifier 'this_insn_1'; did you mean 'this_insn'?
v6 = *( _DWORD **)( *( _QWORD *)&this_insn_1[2] + 8LL); 
                                 ^~~~~~~~~~~
                                 this_insn
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/wipe_dead_reg/src/local-alloc.c:243:12: note: 'this_insn' declared here
static rtx this_insn;
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/wipe_dead_reg/src/local-alloc.c:2610:34: error: use of undeclared identifier 'this_insn_1'; did you mean 'this_insn'?
v6 = *( _DWORD **)( *( _QWORD *)&this_insn_1[2] + 8LL); 
                                 ^~~~~~~~~~~
                                 this_insn
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/wipe_dead_reg/src/local-alloc.c:243:12: note: 'this_insn' declared here
static rtx this_insn;
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/wipe_dead_reg/src/local-alloc.c:2615:35: error: use of undeclared identifier 'this_insn_1'; did you mean 'this_insn'?
if ( output_p || find_regno_note( this_insn_1, REG_INC, rtint) ) 
                                  ^~~~~~~~~~~
                                  this_insn
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/wipe_dead_reg/src/local-alloc.c:243:12: note: 'this_insn' declared here
static rtx this_insn;
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/wipe_dead_reg/src/local-alloc.c:2620:21: error: use of undeclared identifier 'machine_mode'
mark_life( rtint, ( machine_mode)*( ( unsigned __int8 *)reg + 2), 0); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/wipe_dead_reg/src/local-alloc.c:2623:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)reg + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/wipe_dead_reg/src/local-alloc.c:2632:21: error: use of undeclared identifier 'machine_mode'
mark_life( rtint, ( machine_mode)*( ( unsigned __int8 *)reg + 2), 0); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/wipe_dead_reg/src/local-alloc.c:2637:1: error: use of undeclared identifier 'qty_0'
qty_0[v4].death = output_p + 2 * this_insn_number; 
^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/wipe_dead_reg/src/obj/local-alloc.o] Error 1
